fixing alignment

--- a/src/assets/style/css/index.css
+++ b/src/assets/style/css/index.css
@@ -300,7 +300,7 @@ nav {
 .vertical-line {
   border-color: #bac5e1;
   border-left: solid 1px;
-  height: 120px;
+  height: 114px;
   margin-top: 25px; }
 
 .line-position {
