--- a/src/assets/style/scss/components/_icons-block.scss
+++ b/src/assets/style/scss/components/_icons-block.scss
@@ -25,7 +25,7 @@
 .vertical-line {
   border-color: $secondary-color;
   border-left: solid 1px;
-  height: 120px;
+  height: 114px;
   margin-top: 25px;
 }
 
